# mc_nao

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
etc/LIPMWalking/: nao.yaml
include/mc_nao/: nao.h
src/: nao.cpp
tests/: CMakeLists.txt
